--- a/ProjectCaro/ProjectCaro/ProjectCaro.csproj
+++ b/ProjectCaro/ProjectCaro/ProjectCaro.csproj
@@ -53,12 +53,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CaroAPI.cs" />
-    <Compile Include="Client.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Client.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Caro.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Caro.Designer.cs">
+      <DependentUpon>Caro.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -71,8 +73,8 @@
     <Compile Include="TabMap.cs">
       <SubType>Form</SubType>
     </Compile>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Caro.resx">
+      <DependentUpon>Caro.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
