--- a/ProjectCaro/CaroGameServer/CaroGameServer.csproj
+++ b/ProjectCaro/CaroGameServer/CaroGameServer.csproj
@@ -58,6 +58,7 @@
     <Compile Include="DBMySQLUtils.cs" />
     <Compile Include="DBUtils.cs" />
     <Compile Include="HandleClient.cs" />
+    <Compile Include="Online.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Room.cs" />
