--- a/ProjectCaro/ProjectCaro/ProjectCaro.csproj
+++ b/ProjectCaro/ProjectCaro/ProjectCaro.csproj
@@ -163,5 +163,14 @@
   <ItemGroup>
     <None Include="Resources\x_cut.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\delete.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\left_arrow.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\right_arrow.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
